--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-remark-autolink-headers": "^2.11.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-katex": "^6.1.0",
     "gatsby-remark-mathjax-ssr": "^1.2.1",
     "gatsby-remark-prismjs": "^4.0.0",
     "gatsby-remark-smartypants": "^3.0.0",
@@ -33,6 +34,7 @@
     "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.0",
+    "katex": "^0.15.1",
     "prismjs": "^1.23.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
