--- a/package.json
+++ b/package.json
@@ -2,45 +2,40 @@
   "name": "zoomkoding.com",
   "private": false,
   "description": "A neat blog theme for developers",
-  "version": "1.1.0",
+  "version": "3.0.0",
   "author": "zoomkoding <zoomkoding@gmail.com>",
   "dependencies": {
-    "@fontsource/montserrat": "^4.2.2",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "gatsby": "^2.32.3",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-advanced-sitemap": "^1.6.0",
-    "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-feed": "^2.1.0",
-    "gatsby-plugin-google-analytics": "^2.0.17",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.2.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-remark-autolink-headers": "^2.11.0",
-    "gatsby-remark-copy-linked-files": "^3.0.0",
-    "gatsby-remark-images": "^4.0.0",
-    "gatsby-remark-katex": "^6.1.0",
-    "gatsby-remark-mathjax-ssr": "^1.2.1",
-    "gatsby-remark-prismjs": "^4.0.0",
-    "gatsby-remark-smartypants": "^3.0.0",
-    "gatsby-remark-table-of-contents": "^1.0.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-theme-material-ui": "^1.0.13",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "katex": "^0.15.1",
-    "prismjs": "^1.23.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
+    "gatsby": "^4.9.3",
+    "gatsby-plugin-advanced-sitemap": "^2.0.0",
+    "gatsby-plugin-google-analytics": "^4.9.0",
+    "gatsby-plugin-image": "^2.9.1",
+    "gatsby-plugin-manifest": "^4.9.1",
+    "gatsby-plugin-offline": "^5.9.1",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sass": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.1",
+    "gatsby-remark-autolink-headers": "^5.9.0",
+    "gatsby-remark-copy-linked-files": "^5.9.0",
+    "gatsby-remark-images": "^6.9.1",
+    "gatsby-remark-prismjs": "^6.9.0",
+    "gatsby-remark-responsive-iframe": "^5.9.0",
+    "gatsby-remark-smartypants": "^5.9.0",
+    "gatsby-remark-table-of-contents": "^2.0.0",
+    "gatsby-source-filesystem": "^4.9.1",
+    "gatsby-theme-material-ui": "^5.1.0",
+    "gatsby-transformer-remark": "^5.9.1",
+    "gatsby-transformer-sharp": "^4.9.0",
+    "prismjs": "^1.24.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-rotating-text": "^1.4.1",
-    "sass": "^1.32.8"
+    "sass": "^1.43.4",
+    "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
@@ -53,10 +48,10 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby clean && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "deploy": "gatsby build && gh-pages -d public",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
